RESOLVED FIXED137260
Label some asserts as having security implications
https://bugs.webkit.org/show_bug.cgi?id=137260
Summary Label some asserts as having security implications
Mark Lam
Reported 2014-09-30 12:59:06 PDT
Patch coming. <rdar://problem/18490889>
Attachments
the patch. (2.72 KB, patch)
2014-09-30 13:59 PDT, Mark Lam
fpizlo: review+
Mark Lam
Comment 1 2014-09-30 13:59:37 PDT
Created attachment 238957 [details] the patch.
Mark Lam
Comment 2 2014-09-30 14:06:06 PDT
Note You need to log in before you can comment on or make changes to this bug.