Label some asserts as having security implications. <https://webkit.org/b/137260>

Reviewed by Filip Pizlo.

* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::handleAssertionFailure):
* runtime/JSCell.h:
(JSC::jsCast):
* runtime/StructureIDTable.h:
(JSC::StructureIDTable::get):



Canonical link: https://commits.webkit.org/155068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174122 268f45cc-cd09-0410-ab3c-d52691b4dbfc